# shlack

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  install.sh  main.rs
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  cicd.yml  docs.yml
src/: lib.rs  main.rs  msg.rs  read.rs  send.rs
tests/: msg_tests.rs
